and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

15 October 14: V.Ivant (emutils-V10-00-36)
15 October 14: V.Ivant (emutils-V10-00-35)
- fixed G4VEnergyLossProcess

14 October 14: V.Ivant (emutils-V10-00-34)
- fixed G4VMultipleScattering

14 October 14: V.Ivant (emutils-V10-00-33)
- fixed logic of sub-cutoff mechnism

13 October 14: V.Ivant (emutils-V10-00-32)
- fixed typo

13 October 14: V.Ivant (emutils-V10-00-31)
- G4EmParameters, G4EmParametersMessenger - new classes for 
    keeping EM parameters static for run time
- G4VEmProcess, G4VEnergyLossProcess, G4VMultipleScattering,
    G4EmProcessOptions, G4VAtomDeexcitation - changed initialisation
    logic - use G4EmParameters class, fixed problem #1670

06 October 14: L.Urban (emutils-V10-00-30)
- G4MscStepLimitType, G4EnergyLossMessenger - added new step limit 
    type for msc: UseSafetyPlus

22 September 14: V.Ivant (emutils-V10-00-29)
- G4VEmProcess, G4VEnergyLossProcess - fixed model type definition
    for secondary particle production (fluoresence, PIXE, splitting)

21 July 14: V.Ivant (emutils-V10-00-28)
- G4EmCorrections, G4EmElementSelector, G4LossTableManager,
  G4VEmModel, G4VEmProcess, G4VEnergyLossProcess - introduced 
    explicit delete of all PhysicsTables and PhysicsVectors at the 
    end of job
- G4EmCalculator - added public FindProcess() method 
 
27 June 14: V.Ivant (emutils-V10-00-27)
- G4VAtomDeexcitation - if de-excitation options are defined for the 
    world G4Region, propagate these options to all G4Regions

6 June 14: V.Ivant (emutils-V10-00-26)
- G4VEmProcess, G4VEnergyLossProcess - fixed Coverity reports

6 June 14: V.Ivant (emutils-V10-00-25)