@@ -17,6 +17,12 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+17 October 14: V.Ivant (emutils-V10-00-37)
+- G4VEmProcess, G4VEnergyLossProcess - improved printout at 
+    initialisation, added extra initialisation
+- G4VEmProcess, G4VEmModel - added accessmethos for target element 
+    and isotope
+
 15 October 14: V.Ivant (emutils-V10-00-36)
 15 October 14: V.Ivant (emutils-V10-00-35)
 - fixed G4VEnergyLossProcess
